--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "vitest": "^3.1.1"
   },
   "dependencies": {
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "leaflet": "1.0",
     "leaflet-draw": "^0.3.2",
-    "ol": "^10.2.1"
+    "ol": "^10.5.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
