--- a/package.json
+++ b/package.json
@@ -4,11 +4,32 @@
   "private": false,
   "version": "0.0.1",
   "type": "module",
+  "main": "dist/bpenv-modeler.js",
+  "module": "dist/bpenv-modeler.js",
+  "exports": {
+    "import": "./dist/bpenv-modeler.js",
+    "require": "./dist/bpenv-modeler.js"
+  },
+  "files": [
+    "dist"
+  ],
+  "style": "dist/style.css",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "test": "vitest"
+  },
+  "dependencies": {
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "bootstrap": "^5.3.7",
+    "leaflet": "1.0",
+    "leaflet-draw": "^0.3.2",
+    "ol": "^10.6.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.14",
@@ -17,13 +38,7 @@
     "vite": "^5.4.10",
     "vitest": "^3.1.1"
   },
-  "dependencies": {
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "leaflet": "1.0",
-    "leaflet-draw": "^0.3.2",
-    "ol": "^10.5.0",
+  "peerDependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
