--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,9 +7,9 @@
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [
-	// 	"5173:5173"
-	// ],
+	"forwardPorts": [
+		"5173:5173"
+	],
 	"customizations": {
 		"vscode": {
 			"extensions": []
