--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "style": "dist/style.css",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "BROWSER=none vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest"
@@ -29,7 +29,9 @@
     "leaflet-draw": "^0.3.2",
     "ol": "^10.6.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.14",
