--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -19,7 +19,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: rm -rf node_modules && npm ci
+        run: rm -rf node_modules package-lock.json && npm install
 
       - name: Run tests
         run: npm run test
