--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bpenv-modeler",
   "author": "University of Camerino",
   "private": false,
-  "version": "0.0.13",
+  "version": "0.0.16",
   "type": "module",
   "main": "dist/bpenv-modeler.js",
   "module": "dist/bpenv-modeler.js",
@@ -21,8 +21,6 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@types/react": "^19.1.1",
-    "@types/react-dom": "^19.1.1",
     "@vitejs/plugin-react": "^4.3.4",
     "bootstrap": "^5.3.7",
     "leaflet": "1.0",
@@ -32,6 +30,8 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.1",
     "@types/leaflet": "^1.9.14",
     "@types/leaflet-draw": "^0.4.14",
     "typescript": "~5.6.2",
@@ -39,7 +39,7 @@
     "vitest": "^3.1.1"
   },
   "peerDependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react": ">=16.8.0 <20.0.0",
+    "react-dom": ">=16.8.0 <20.0.0"
   }
 }
