--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "style": "dist/style.css",
   "scripts": {
-    "dev": "BROWSER=none vite --host",
+    "dev": "cross-env BROWSER=none vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest"
@@ -23,6 +23,7 @@
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
     "bootstrap": "^5.3.7",
+    "bpenv-modeler": "^0.0.17",
     "leaflet": "1.0",
     "leaflet-draw": "^0.3.2",
     "ol": "^10.6.1",
@@ -30,10 +31,11 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@types/react": "^19.1.1",
-    "@types/react-dom": "^19.1.1",
     "@types/leaflet": "^1.9.14",
     "@types/leaflet-draw": "^0.4.14",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.1",
+    "cross-env": "^10.1.0",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vitest": "^3.1.1"
